argocd/argocd-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /argocd
