argocd/argocd-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port: 
              name: https
    host: argocd.alie.javeriana.edu.co
  tls:
  - hosts:
    - argocd.alie.javeriana.edu.co
    secretName: argocd-secret
